deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-auth-proxy
  namespace: kube-auth-proxy
spec:
  selector:
    app: kube-auth-proxy
  ports:
    - protocol: TCP
      port: 8080
