deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-auth-proxy
  namespace: kube-auth-proxy
spec:
  ingressClassName: traefik
  rules:
  - host: kube-auth-proxy.k3s.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-auth-proxy
            port:
              number: 8080
